--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "framer-motion": "^12.23.25",
+    "lucide-react": "^0.562.0",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
